@@ -40,6 +40,7 @@ All:
 - Added wxMutex::LockTimeout() (Aleksandr Napylov)
 - Set locale to the default in all ports, not just wxGTK
 - Added wxGridUpdateLocker helper class (Evgeniy Tarassov)
+- Support wxGRID_AUTOSIZE in wxGrid::SetRow/ColLabelSize() (Evgeniy Tarassov)
 
 wxGTK:
 
